# kitchenView

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  frontend.Dockerfile  main.py  openapi.json  pyproject.toml
docker/: .env  nginx.conf
integrations/edaru/: api.py  schemas.py
kitchenView/: main.py  utils.py
kitchenView-frontend/: app.vue  components.json  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
kitchenView-frontend/assets/css/: tailwind.css
kitchenView-frontend/components/logic/dialogs/: CreateRecipeDialog.vue  index.ts
kitchenView-frontend/extensions/: useAuthedFetch.ts
kitchenView-frontend/interfaces/: recipe.interface.ts  user.interface.ts
kitchenView-frontend/layouts/: default.vue
kitchenView-frontend/lib/: utils.ts
kitchenView-frontend/middleware/: auth.global.ts
kitchenView-frontend/pages/: index.vue  init.vue  login.vue  search.vue
kitchenView-frontend/stores/: recipeStore.ts  userStore.ts
kitchenView-frontend/stores/interfaces/: recipeStore.interface.ts  userStore.interface.ts
kitchenView/api/: __init__.py  recipe.py  user.py
kitchenView/core/: config.py  database.py  deps.py  security.py
kitchenView/integrations/: __init__.py
kitchenView/integrations/edaru/: __init__.py  api.py  schemas.py
kitchenView/migrations/: env.py
kitchenView/migrations/versions/: 01f6b0b79b39_.py  2b33f414b683_.py  6f505a1552bb_.py  8e7081137dac_.py  92a3e0aab181_.py
kitchenView/models/: __init__.py  recipe.py  user.py
kitchenView/schemas/: recipe.py  user.py
(+15 files in other folders)
