[tool.poetry]
name = "kitchenview"
version = "0.1.0"
description = ""
authors = ["Kirill Nikolaevskiy <kirill.nikolaevskiy@rt.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.1"
aiohttp = "^3.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
